--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "10.13.0"
   },
+  "homepage": "https://testsimpleapp.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
